--- a/style.css
+++ b/style.css
@@ -132,3 +132,9 @@ nav input[type="submit"]{
     border-radius: 20px;
     box-shadow: 0 20px 20px -10px #000;
 }
+.swiper-slide span{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
