--- a/style.css
+++ b/style.css
@@ -77,19 +77,21 @@ nav input[type="submit"]{
     display: flex;
     flex-direction: column;
     margin: 0 10px;
-    background: #fff;
+    background: rgb(20, 155, 155);
     border-radius: 20px;
-    padding: 10px;
-    box-shadow: 10px 10px 20px rgba(0,0,0,.9);
+    padding: 30px 30px 30px 40px;
+    box-shadow: 10px 10px 20px rgba(0,0,0,.9),
+        inset 0px -10px 30px rgba(0,0,0,0.9);
     z-index: 2;
 }
 .date{
     font-size: 20px;
 }
 #city{
-    margin-top: 5px;
+    margin-top: 10px;
     font-size: 24px;
     font-weight: 600;
+    color: rgb(244, 248, 4);
 }
 .icontemp{
     display: flex;
@@ -97,11 +99,12 @@ nav input[type="submit"]{
     align-items: center;
 }
 .icontemp #icon{
-    margin: 0;
+    margin: 0 30px 0 0;
 }
 .icontemp #temperature{
     margin-right: 5px;
     font-size: 30px;
+    color: #fff;
 }
 .feels-like{
     margin-bottom: 10px;
@@ -110,6 +113,9 @@ nav input[type="submit"]{
 }
 #feelslike{
     margin: 0 5px;
+}
+#weather{
+    color: rgb(244, 248, 4);
 }
 .hwuv{
     display: flex;
@@ -121,20 +127,56 @@ nav input[type="submit"]{
     margin: 10px;
 }
 .swiper-slide{
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
     max-width: 260px;
     height: 30vh;
-    background: teal;
+    color: #fff;
+    background: rgb(59, 59, 59);
     padding: 20px;
+    margin: 35px 10px 10px 25px;
     border-radius: 20px;
-    box-shadow: 0 20px 20px -10px #000;
+    /* box-shadow: 0 20px 20px -10px #000; */
+}
+.swiper-slide::before{
+    content: '';
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    bottom: -2px;
+    right: -2px;
+    background: #fff;
+    z-index: -1;
+    border-radius: 20px;
+    background: linear-gradient(-35deg,rgb(4, 206, 196), rgb(29, 29, 29), rgb(244, 248, 4));
+}
+.swiper-slide::after{
+    content: '';
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    bottom: -2px;
+    right: -2px;
+    background: #fff;
+    filter: blur(20px);
+    z-index: -1;
+    border-radius: 20px;
+    background: linear-gradient(-35deg,rgb(4, 206, 196), rgb(29, 29, 29), rgb(244, 248, 4));
 }
 .swiper-slide span{
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+#high{
+    color: rgb(244, 248, 4);
+    margin: 5px;
+}
+#low{
+    color: rgb(4, 206, 196);
+    margin: 5px;
 }
