--- a/style.css
+++ b/style.css
@@ -7,13 +7,16 @@ body{
     font-family: sans-serif;
     background: #000;
 }
+a{
+    cursor: pointer;
+}
 .container{
     background: url(cloud.jfif);
     background-size: cover;
     background-repeat: no-repeat;
     background-position-y: top;
     background-position-x: center;
-    padding-bottom: 20px;
+    padding: 20px 0;
     position: relative;
     z-index: 1;
 }
@@ -28,28 +31,71 @@ body{
     opacity: .5;
 }
 /* NAV */
-nav{
-    position: relative;
-    display: block;
+.burger{
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    display:flex;
+    flex-direction: column;
+    cursor: pointer;
+}
+.burger div{
+    background: #fff;
+    width: 40px;
+    height: 4px;
+    margin-bottom: 5px;
+    z-index: 2;
+}
+.link{
+    color: #fff;
+    list-style: none;
+}
+.search-list li{
+    margin-bottom: 10px;
+}
+.nav{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    top: 50px;
     background: #000;
     padding: 20px;
+    max-width: 700px;
+    height: 100vh;
     text-align: center;
-    justify-content: center;
-    max-height: 20vh;
-    z-index: 2;
+    z-index: 3;
+    transform: translateX(-100%);
+    transition: transform 0.5s ease-in;
 }
-nav form{
+.nav-active{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    top: 50px;
+    background: #000;
+    padding: 20px;
+    max-width: 700px;
+    height: 100vh;
+    text-align: center;
+    transform: translateX(0%);
+    z-index: 3;
+}
+.nav form,
+.nav-active form{
     display: inline-block;
+    height: 50px;
     z-index: 2;
 }
-nav input[type="text"]{
+.nav input[type="text"],
+.nav-active input[type="text"]{
     padding: 5px 5px 5px 15px;
     border-radius: 25px 0 0 25px;
     outline: none;
     border-style: none;
     line-height: 30px;
 }
-nav input[type="submit"]{
+.nav input[type="submit"],
+.nav-active input[type="submit"]{
     padding: 10px;
 }
 .search-btn{
@@ -86,6 +132,7 @@ nav input[type="submit"]{
 }
 .date{
     font-size: 20px;
+    font-weight: 600;
 }
 #city{
     margin-top: 10px;
