add @media query for mobile

--- a/style.css
+++ b/style.css
@@ -227,3 +227,14 @@ a{
     color: rgb(4, 206, 196);
     margin: 5px;
 }
+
+
+
+@media only screen 
+    and (device-width: 375px) 
+    and (device-height: 812px) 
+    and (-webkit-device-pixel-ratio: 3){
+        .swiper-slide{
+            width: 135px !important;
+        }
+    }
