--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ a{
 
 
 
-/* @media only screen 
+@media only screen 
     and (device-width: 375px) 
     and (device-height: 812px) 
     and (-webkit-device-pixel-ratio: 3){
@@ -236,4 +236,4 @@ a{
         .search-btn{
          height: 38px;   
         }
-    } */
+    }
