--- a/style.css
+++ b/style.css
@@ -218,10 +218,12 @@ a{
 #high{
     color: rgb(244, 248, 4);
     margin: 5px;
+    font-weight: 600;
 }
 #low{
     color: rgb(4, 206, 196);
     margin: 5px;
+    font-weight: 600;
 }
 
 
